# Text-Compressor

./: .gitignore  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Common.h  Makefile  README.md  in.txt  input.txt  main.cpp
.github/workflows/: ci.yml
include/: cipherer.h  cipherist.h  command_handler.h  file_handler.h  huffman_codec.h  huffman_tree.h  lz77_codec.h  node.h  tree.h
operations/: Codec.cpp  Codec.h  FileIO.cpp  FileIO.h  HuffmanCodec.cpp  HuffmanCodec.h  LZ77Codec.cpp  LZ77Codec.h
src/: CommandHandler.cpp  CommandHandler.h  Common.h  command_handler.cpp  common.h  huffman_tree.cpp  main.cpp
src/operations/: Cipherer.cpp  Cipherer.h  FileIO.cpp  FileIO.h  HuffmanCodec.cpp  HuffmanCodec.h  LZ77Codec.cpp  LZ77Codec.h  cipherer.cpp  cipherer.h  cipherist.cpp  file_handler.cpp  huffman_codec.cpp  huffman_codec.h  lz77_codec.cpp  lz77_codec.h
src/tree/: Node.h  Tree.cpp  Tree.h  node.h  tree.cpp  tree.h
tree/: Node.h  Tree.cpp  Tree.h
